Try fixing the button iOS

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ input[type="button"] {
     -webkit-appearance: none !important;
     -moz-appearance: none;
     appearance: none;
-    color: #000;
+    color: #000 !important;
 }
 .botao {
     background-color: #2C7A5B;
